updated nb part 2

--- a/api_example.ipynb
+++ b/api_example.ipynb
@@ -60,7 +60,7 @@
    "id": "b6d54868",
    "metadata": {},
    "source": [
-    "## API R equirements\n",
+    "## API Requirements\n",
     "\n",
     "To access information via APIs you often need an access key. This access key usually guarantees some visibility to the owner of the APIs so that they can grant access to good people, and take away from those who might abuse their products.\n",
     "\n",
@@ -86,7 +86,8 @@
    "metadata": {},
    "source": [
     "## Your First Request with Code\n",
-    "\n"
+    "\n",
+    "The `requests` library has a nice function that we can use with `.get()`. Within it, we pass the API URL we use earlier alongside our variables defined above. In order to include in a piece of text, we need an `f` in front of the quotation marks `\" \"` and we need curly brackets to add our defined variables to their respective places."
    ]
   },
   {
@@ -158,14 +159,6 @@
     "    print(f\"The current temperature is --> {json.loads(r2.text)['main']['temp']} C\")\n",
     "    print(\"-\" * 30)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc9ed019",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
